--- a/publication_types/index.html
+++ b/publication_types/index.html
@@ -23,14 +23,14 @@
   
   
 
-  <meta name="author" content="Nelson Bighetti">
+  <meta name="author" content="Yi Mei">
 
   
   
   
     
   
-  <meta name="description" content="Professor of Artificial Intelligence">
+  <meta name="description" content="Senior Lecturer">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/publication_types/">
@@ -122,7 +122,7 @@
   <meta property="og:site_name" content="Academic">
   <meta property="og:url" content="https://meiyi1986.github.io/publication_types/">
   <meta property="og:title" content="Publication_types | Academic">
-  <meta property="og:description" content="Professor of Artificial Intelligence"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="Senior Lecturer"><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
