--- a/404.html
+++ b/404.html
@@ -394,6 +394,10 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/tan-2018-genetic/">A Genetic Programming Hyper-heuristic Approach for Online Resource Allocation in Container-Based Clouds</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/nguyen-2018-hybrid/">A Hybrid Genetic Programming Algorithm for Automated Design of Dispatching Rules</a></li>
   </ul>
   
@@ -406,11 +410,7 @@
   </ul>
   
   <ul>
-    <li><a href="/publication/park-2018-investigation/">An investigation of ensemble combination schemes for genetic programming based hyper-heuristic approaches to dynamic job shop scheduling</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/tan-2018-evolutionary/">Evolutionary Multi-Objective Optimization for Web Service Location Allocation Problem</a></li>
+    <li><a href="/publication/masood-2018-adaptive/">Adaptive Reference Point Generation for Many-Objective Optimization Using NSGA-III</a></li>
   </ul>
   
   
