--- a/publication/omidvar-2014-cooperative/index.html
+++ b/publication/omidvar-2014-cooperative/index.html
@@ -540,6 +540,8 @@
 
 
 
+  
+
 
 
 
@@ -560,6 +562,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/omidvar-2014-cooperative/omidvar-2014-cooperative.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 js-cite-modal"
@@ -567,6 +573,14 @@
   Cite
 </button>
 
+
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://bitbucket.org/mno/differential-grouping" target="_blank" rel="noopener">
+  Code
+</a>
 
 
 
