--- a/index.html
+++ b/index.html
@@ -633,11 +633,11 @@
   <div class="col-12 col-lg-8">
     <ul>
 <li><font color="red"><strong>[PhD Vacancy]</strong></font> I am looking for PhD/MSc/Honours/Summer Research students in <strong>Evolutionary Computation and Machine Learning for Scheduling and Combinatorial Optimisation</strong>. If you have similar research interests with me, please do not hesitate to <a href="#contact">contact</a> me.</li>
-<li><strong>2018-12</strong>, our <a href="https://meiyi1986.github.io/publication/zhang-2018-genetic/" target="_blank">paper</a> won the Australasian Joint Conference on Artificial Intelligence <font color="red"><strong>Best Paper Runner-Up Award</strong>!</font></li>
-<li><strong>2018-11</strong>, I received a Victoria University of Wellington <font color="red"><strong>Early Research Excellence Award</strong>!</font></li>
-<li><strong>2018-07</strong>, our <a href="https://meiyi1986.github.io/publication/da-2018-hybrid/" target="_blank">paper</a> was ranked the International Conference on Web Services <font color="red"><strong>Best Paper Runner-Up</strong>!</font></li>
-<li><strong>2017-07</strong>, our <a href="https://meiyi1986.github.io/publication/omidvar-2014-effective/" target="_blank">paper</a> won the <font color="red"><strong><a href="https://cis.ieee.org/getting-involved/awards/cis-awards#TECOutstandingPaperAward" target="_blank">IEEE TEVC Outstanding Paper Award</a></strong>!</font></li>
-<li><strong>2016-04</strong>, our <a href="https://meiyi1986.github.io/publication/da-2016-particle/" target="_blank">paper</a> received the European Conference on Evolutionary Computation in Combinatorial Optimization <font color="red"><strong>Best Paper Nomination</strong>!</font></li>
+<li><strong>2018-12</strong>, our <a href="https://meiyi1986.github.io/publication/zhang-2018-genetic/" target="_blank">paper</a> won the Australasian Joint Conference on Artificial Intelligence <strong>Best Paper Runner-Up Award</strong>!</li>
+<li><strong>2018-11</strong>, I received a Victoria University of Wellington <strong>Early Research Excellence Award</strong>!</li>
+<li><strong>2018-07</strong>, our <a href="https://meiyi1986.github.io/publication/da-2018-hybrid/" target="_blank">paper</a> was ranked the International Conference on Web Services (<strong>ARC/CORE Rank A</strong>) <strong>Best Paper Runner-Up</strong>!</li>
+<li><strong>2017-07</strong>, our <a href="https://meiyi1986.github.io/publication/omidvar-2014-cooperative/" target="_blank">paper</a> won the <strong>IEEE TEVC Outstanding Paper Award (ARC/CORE Rank A*)</strong>!</li>
+<li><strong>2016-04</strong>, our <a href="https://meiyi1986.github.io/publication/da-2016-particle/" target="_blank">paper</a> received the European Conference on Evolutionary Computation in Combinatorial Optimization <strong>Best Paper Nomination</strong>!</li>
 <li><strong>2016-12</strong>, I gave a <strong>IEEE CIS Webinar</strong>: &ldquo;Genetic Programming Hyper-Heuristics for Combinatorial Optimisation&rdquo;. <a href="https://ieeetv.ieee.org/ieeetv-specials/genetic-programming-hyper-heuristics-for-combinatorial-optimisation-yi-mei-cis-webinar">[Video]</a> | <a href="IEEEWebinar.pptx">[Slides]</a></li>
 </ul>
 
