--- a/index.html
+++ b/index.html
@@ -856,7 +856,8 @@
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Recent Publications</h1>
-    
+    <p>journals: 23, conferences: 55 \
+h-index: 16, citations: 1361&rdquo;</p>
   </div>
   <div class="col-12 col-lg-8">
     
