--- a/index.html
+++ b/index.html
@@ -856,8 +856,8 @@
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Recent Publications</h1>
-    <p>journals: 23, conferences: 55 \
-h-index: 16, citations: 1361&rdquo;</p>
+    <p><strong>journals</strong>: 23, <strong>conferences</strong>: 56 <br />
+<strong>h-index</strong>: 16, <strong>citations</strong>: 1361</p>
   </div>
   <div class="col-12 col-lg-8">
     
