--- a/publication/index.html
+++ b/publication/index.html
@@ -2070,6 +2070,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/park-2018-investigation/park-2018-investigation.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
