--- a/publication/park-2018-investigation/index.html
+++ b/publication/park-2018-investigation/index.html
@@ -547,6 +547,8 @@
 
 
 
+  
+
 
 
 
@@ -566,6 +568,10 @@
 
   
 
+
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/park-2018-investigation/park-2018-investigation.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
 
 
 
