--- a/index.html
+++ b/index.html
@@ -684,10 +684,10 @@
   </div>
   <div class="col-12 col-lg-8">
     <ul>
-<li><strong>2018</strong>: <a href="http://www.victoria.ac.nz/courses/comp/307/2018/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
-<li><strong>2018</strong>: <a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></li>
-
-<li><p><strong>2018</strong>: <a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p></li>
+<li><p><strong>2018</strong>
+..* <a href="http://www.victoria.ac.nz/courses/comp/307/2018/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a>
+..* <a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a>
+..* <a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p></li>
 
 <li><p><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/comp/261/2017/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></p></li>
 
