--- a/index.html
+++ b/index.html
@@ -679,21 +679,19 @@
 <div class="row">
   
   <div class="col-12 col-lg-4 section-heading">
-    <h1>teaching</h1>
+    <h1>Teaching</h1>
     
   </div>
   <div class="col-12 col-lg-8">
-    <ul>
-<li><p><strong>2018</strong>
-..* <a href="http://www.victoria.ac.nz/courses/comp/307/2018/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a>
-..* <a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a>
-..* <a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p></li>
+    <p>####2018####
+- <a href="http://www.victoria.ac.nz/courses/comp/307/2018/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a>
+- <a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a>
+- <a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p>
 
-<li><p><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/comp/261/2017/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></p></li>
-
-<li><p><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/swen/221/2017/offering?crn=18318">Software Development (SWEN221)</a></p></li>
-
-<li><p><strong>2017</strong>: <a href="https://www.victoria.ac.nz/courses/comp/422/2017/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p></li>
+<ul>
+<li><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/comp/261/2017/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></li>
+<li><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/swen/221/2017/offering?crn=18318">Software Development (SWEN221)</a></li>
+<li><strong>2017</strong>: <a href="https://www.victoria.ac.nz/courses/comp/422/2017/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></li>
 
 <li><p><strong>2017</strong>: <a href="https://www.victoria.ac.nz/courses/SWEN/304/2017/offering?crn=17186">Database System Engineering (SWEN304)</a></p></li>
 
