--- a/index.html
+++ b/index.html
@@ -690,20 +690,23 @@
 <ul>
 <li><a href="http://www.victoria.ac.nz/courses/comp/307/2018/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
 <li><a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></li>
+<li><a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></li>
+</ul>
 
-<li><p><a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p></li>
+<h3 id="2017">2017</h3>
 
-<li><p><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/comp/261/2017/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></p></li>
+<ul>
+<li><a href="http://www.victoria.ac.nz/courses/comp/261/2017/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></li>
+<li><a href="http://www.victoria.ac.nz/courses/swen/221/2017/offering?crn=18318">Software Development (SWEN221)</a></li>
+<li><a href="https://www.victoria.ac.nz/courses/comp/422/2017/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></li>
+<li><a href="https://www.victoria.ac.nz/courses/SWEN/304/2017/offering?crn=17186">Database System Engineering (SWEN304)</a></li>
+</ul>
 
-<li><p><strong>2017</strong>: <a href="http://www.victoria.ac.nz/courses/swen/221/2017/offering?crn=18318">Software Development (SWEN221)</a></p></li>
+<h3 id="2016">2016</h3>
 
-<li><p><strong>2017</strong>: <a href="https://www.victoria.ac.nz/courses/comp/422/2017/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></p></li>
-
-<li><p><strong>2017</strong>: <a href="https://www.victoria.ac.nz/courses/SWEN/304/2017/offering?crn=17186">Database System Engineering (SWEN304)</a></p></li>
-
-<li><p><strong>2016</strong>: <a href="http://www.victoria.ac.nz/courses/comp/307/2016/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></p></li>
-
-<li><p><strong>2016</strong>: <a href="http://www.victoria.ac.nz/courses/comp/422/2016/offering?crn=2324">Data Mining, Neural Network and Genetic Programming (COMP422)</a></p></li>
+<ul>
+<li><a href="http://www.victoria.ac.nz/courses/comp/307/2016/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
+<li><a href="http://www.victoria.ac.nz/courses/comp/422/2016/offering?crn=2324">Data Mining, Neural Network and Genetic Programming (COMP422)</a></li>
 </ul>
 
   </div>
