--- a/index.html
+++ b/index.html
@@ -685,8 +685,6 @@
   <div class="col-12 col-lg-8">
     
 
-<h2 id="current">Current</h2>
-
 <h3 id="phd">PhD</h3>
 
 <ul>
@@ -699,30 +697,39 @@
 <li>Alexandre Sawczuk Da Silva (Victoria University of Wellington, 2015): &ldquo;Evolutionary QoS-based Web Service Composition&rdquo; (with Dr Hui Ma, and Prof Mengjie Zhang)</li>
 <li>Atiya Masood (Victoria University of Wellington, 2015): &ldquo;Many-Objective Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
 <li>Deepak Karunakaran (Victoria University of Wellington, 2015): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
+<li>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Topological Optimization Using Evolutionary Techniques&rdquo; (with Prof Xiaodong Li)</li>
+<li>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Hyper-heuristics for Arc Routing&rdquo; (with Prof Mengjie Zhang, and Prof Zili Zhang)</li>
+<li>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;Genetic Programming for Warehouse Layout Optimization&rdquo; (with Dr Andy Song, and Prof Xiaodong Li)</li>
 </ul>
 
 <h3 id="masters">Masters</h3>
 
 <ul>
 <li>Shaolin Wang (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
-</ul>
-
-<h2 id="past">Past</h2>
-
-<h3 id="phd-1">PhD</h3>
-
-<ul>
-<li>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Topological Optimization Using Evolutionary Techniques&rdquo; (with Prof Xiaodong Li)</li>
-<li>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Hyper-heuristics for Arc Routing&rdquo; (with Prof Mengjie Zhang, and Prof Zili Zhang)</li>
-<li>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;Genetic Programming for Warehouse Layout Optimization&rdquo; (with Dr Andy Song, and Prof Xiaodong Li)</li>
-</ul>
-
-<h3 id="masters-1">Masters</h3>
-
-<ul>
 <li>Boxiong Tan (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</li>
 <li>Youhan Xia (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</li>
 <li>Haobo Fu (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</li>
+</ul>
+
+<h3 id="honours-students">Honours Students</h3>
+
+<ul>
+<li>Samuel Meredith (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Dynamic Orienteering Problem&rdquo;</li>
+<li>Michael Sirvid (Victoria University of Wellington, 2018): &ldquo;Genetic Programming for Online Bin Packing&rdquo;</li>
+<li>Valerie Chan (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Orienteering Problem&rdquo;</li>
+<li>Daniel Yska (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
+</ul>
+
+<h3 id="summer-research-students">Summer Research Students</h3>
+
+<ul>
+<li>Jordan MacLachlan (Victoria University of Wellington, 2017): &ldquo;Evolutionary Computation for Dynamic Arc Routing&rdquo;</li>
+<li>Daniel Yska (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
+<li>Josiah Jacobsen-Grocott (Victoria University of Wellington, 2016): &ldquo;Evolutionary Computation for Dynamic Vehicle Routing&rdquo;
+Scott Holdaway (Victoria University of Wellington, 2016): &ldquo;Feature Extraction in NEAT for Atari Games&rdquo; (with Dr Aaron Chen)
+Will Hardwick-Smith (Victoria University of Wellington, 2016): &ldquo;Transfer Learning in NEAT for Atari Games&rdquo; (with Dr Aaron Chen)
+Michael Riley (Victoria University of Wellington, 2015): &ldquo;Evolutionary Computation for Dynamic Job Shop Scheduling&rdquo;
+Longfei Yan (Victoria University of Wellington, 2015): &ldquo;Evolutionary Web Service Composition&rdquo; (with Dr Hui Ma)</li>
 </ul>
 
   </div>
