--- a/index.html
+++ b/index.html
@@ -688,8 +688,8 @@
 <h3 id="2018">2018</h3>
 
 <ul>
-<li><a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a> <strong>[Course Coordinator]</strong>
-<a href="https://www.victoria.ac.nz/courses/comp/361/2018/offering?crn=26060">Design and Analysis of Algorithms (COMP361)</a> <strong>[Course Coordinator]</strong></li>
+<li><a href="http://www.victoria.ac.nz/courses/comp/261/2018/offering?crn=18314">Algorithms and Data Structures (COMP261)</a> <strong>[Course Coordinator]</strong></li>
+<li><a href="https://www.victoria.ac.nz/courses/comp/361/2018/offering?crn=26060">Design and Analysis of Algorithms (COMP361)</a> <strong>[Course Coordinator]</strong></li>
 <li><a href="http://www.victoria.ac.nz/courses/comp/307/2018/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
 <li><a href="https://www.victoria.ac.nz/courses/comp/422/2018/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></li>
 </ul>
@@ -760,18 +760,18 @@
 <li>Alexandre Sawczuk Da Silva (Victoria University of Wellington, 2015): &ldquo;Evolutionary QoS-based Web Service Composition&rdquo; (with Dr Hui Ma, and Prof Mengjie Zhang)</li>
 <li>Atiya Masood (Victoria University of Wellington, 2015): &ldquo;Many-Objective Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
 <li>Deepak Karunakaran (Victoria University of Wellington, 2015): &ldquo;Genetic Programming Hyper-heuristics for Dynamic Job Shop Scheduling&rdquo; (with Dr Aaron Chen, and Prof Mengjie Zhang)</li>
-<li>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Topological Optimization Using Evolutionary Techniques&rdquo; (with Prof Xiaodong Li)</li>
-<li>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Hyper-heuristics for Arc Routing&rdquo; (with Prof Mengjie Zhang, and Prof Zili Zhang)</li>
-<li>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;Genetic Programming for Warehouse Layout Optimization&rdquo; (with Dr Andy Song, and Prof Xiaodong Li)</li>
+<li><em>Md. Jakirul Islam (RMIT University, Australia, graduated in 2018): &ldquo;Structural Topological Optimization Using Evolutionary Techniques&rdquo; (with Prof Xiaodong Li)</em></li>
+<li><em>Yuxin Liu (Southwestern University, China, graduated in 2018): &ldquo;Hyper-heuristics for Arc Routing&rdquo; (with Prof Mengjie Zhang, and Prof Zili Zhang)</em></li>
+<li><em>Jing Xie (RMIT University, Australia, graduated in 2017): &ldquo;Genetic Programming for Warehouse Layout Optimization&rdquo; (with Dr Andy Song, and Prof Xiaodong Li)</em></li>
 </ul>
 
 <h3 id="masters">Masters</h3>
 
 <ul>
 <li>Shaolin Wang (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
-<li>Boxiong Tan (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</li>
-<li>Youhan Xia (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</li>
-<li>Haobo Fu (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</li>
+<li><em>Boxiong Tan (Victoria University of Wellington, graduated in 2016): &ldquo;Evolutionary Computation for Service Location Allocation&rdquo; (with Dr Hui Ma)</em></li>
+<li><em>Youhan Xia (University of Melbourne, Australia, graduated in 2017): &ldquo;Ant Colony System for Itinerary Planning with Restaurants&rdquo; (with Dr Jeffrey Chan)</em></li>
+<li><em>Haobo Fu (University of Science and Technology of China, graduated in 2010): &ldquo;Meta-heuristics for Capacitated Arc Routing Problems&rdquo; (with Prof Ke Tang)</em></li>
 </ul>
 
 <h3 id="honours-students">Honours Students</h3>
