--- a/index.html
+++ b/index.html
@@ -849,33 +849,15 @@ Longfei Yan (Victoria University of Wellington, 2015): &ldquo;Evolutionary Web S
 <li><strong>Sponsorship Chair</strong>, Australasian Joint Conference on Artificial Intelligence <a href="https://ecs.victoria.ac.nz/Events/AI2018/">2018</a></li>
 <li><strong>Technical Co-chair</strong>, International Conference on Data Intelligence and Security (ICDIS) <a href="http://www.icdis.org/">2018</a></li>
 <li><strong>Organisational Committee Member</strong>, International Conference on Computers and Industrial Engineering (CIE) <a href="http://cie48.com/">2018</a></li>
+<li><strong>Co-chair</strong> of Special Session on Evolutionary Scheduling and Combinatorial Optimisation, IEEE Congress on Evolutionary Computation (CEC) 2016, 2017, 2018, 2019</li>
+<li><strong>Co-chair</strong> of Special Session on Evolutionary Computation for Service-Oriented Computing, IEEE Congress on Evolutionary Computation (CEC) 2017, 2018, 2019</li>
+<li><strong>Co-chair</strong> of Special Session on Transfer Learning in Evolutionary Computation, IEEE Congress on Evolutionary Computation (CEC) 2016</li>
+<li><strong>Co-chair</strong> of Special Session on Computational Intelligence for Scheduling and Combinatorial Optimization, Asia-Pacific Symposium on Intelligent and Evolutionary Systems (IES) 2016</li>
 </ul>
 
 <h3 id="conference-program-committee-member">Conference Program Committee Member</h3>
 
-<ul>
-<li>AAAI Conference on Artificial Intelligence <a href="https://aaai.org/Conferences/AAAI-19/">2019</a></li>
-<li>International Conference on Data Intelligence and Security <a href="http://www.icdis.org/">2019</a></li>
-<li>ACM Genetic and Evolutionary Computation Conference (GECCO) 2017, <a href="http://gecco-2018.sigevo.org/">2018</a></li>
-<li>IEEE Congress on Evolutionary Computation (CEC) 2013, 2014, 2016, 2017, <a href="http://www.ecomp.poli.br/~wcci2018/">2018</a></li>
-<li>International Conference on Swarm Intelligence (ICSI), <a href="http://www.ic-si.org/">2018</a></li>
-<li>International Conference on Data Mining and Big Data (DMBD), 2018, <a href="http://dmbd2019.ic-si.org/">2019</a></li>
-<li>International Conference on Advanced Computational Intelligence, <a href="http://www.icaci2018.org/">2018</a></li>
-<li>International Conference on Swarm Intelligence (ANTS) 2016, <a href="http://www.swarm-intelligence.eu/ants2018/">2018</a></li>
-<li>International ACM Conference on Management of Emergent Digital EcoSystems (MEDES), <a href="http://medes.sigappfr.org/18/">2018</a></li>
-<li>International Conference on Data Intelligence and Security (ICDIS) <a href="http://www.icdis.org/">2018</a></li>
-<li>International Conference on Simulated Evolution And Learning (SEAL) 2014, <a href="http://www.seal2017.com/">2017</a></li>
-<li>Australasian Joint Conference on Artificial Intelligence (Australasian AI) 2015, <a href="http://www.ai2017.org/">2017</a><br /></li>
-<li>Australasian Conference on Artificial Life and Computational Intelligence (ACALCI) 2016, <a href="http://cs.adelaide.edu.au/~acalci2017/">2017</a></li>
-<li>IEEE Symposium Series on Computational Intelligence (SSCI) 2016, <a href="http://www.ele.uri.edu/ieee-ssci2017/">2017</a></li>
-<li>Asia-Pacific Symposium on Intelligent and Evolutionary Systems (IES) 2016, <a href="http://fit.lqdtu.edu.vn/ies2017/">2017</a></li>
-<li>International Conference on Innovations in Bio-Inspired Computing and Applications (IBICA) 2015, 2016, 2017</li>
-<li>International Conference on Hybrid Intelligent Systems (HIS) 2016</li>
-<li>International Conference of Soft Computing and Pattern Recognition (SoCPaR) 2015, 2016</li>
-<li>International Conference on Intelligent Systems Design and Applications (ISDA) 2016</li>
-<li>World Congress on Nature and Biologically Inspired Computing (NaBIC) 2016</li>
-<li>BRICS Congress on Computational Intelligence (BRCIS-CCI) 2015</li>
-</ul>
+<p>I serve as a PC member for ~40 international conferences (<a href="/pclist/">full list</a>).</p>
 
 <h3 id="membership">Membership</h3>
 
@@ -887,27 +869,9 @@ Longfei Yan (Victoria University of Wellington, 2015): &ldquo;Evolutionary Web S
 <li><strong>Member</strong> of IEEE Task Force on Operations Research and Management Sciences, 2018-present</li>
 <li><strong>Member</strong> of IEEE Task Force on Evolutionary Scheduling and Combinatorial Optimization, 2016-2017</li>
 <li><strong>Member</strong> of IEEE Task Force on Large Scale Optimisation, 2015-2016</li>
-<li><strong>Co-chair</strong> of Special Session on Evolutionary Scheduling and Combinatorial Optimisation, IEEE Congress on Evolutionary Computation (CEC) 2016, 2017, 2018, 2019</li>
-<li><strong>Co-chair</strong> of Special Session on Evolutionary Computation for Service-Oriented Computing, IEEE Congress on Evolutionary Computation (CEC) 2017, 2018, 2019</li>
-<li><strong>Co-chair</strong> of Special Session on Transfer Learning in Evolutionary Computation, IEEE Congress on Evolutionary Computation (CEC) 2016</li>
-<li><strong>Co-chair</strong> of Special Session on Computational Intelligence for Scheduling and Combinatorial Optimization, Asia-Pacific Symposium on Intelligent and Evolutionary Systems (IES) 2016</li>
+<li><strong>Treasurer</strong> of IEEE New Zealand Central Section, 2018-present</li>
+<li><strong>Young Professional Coordinator</strong> of IEEE New Zealand Central Section, 2018</li>
 <li>IEEE Senior Member, ACM Member</li>
-</ul>
-
-<h3 id="2017">2017</h3>
-
-<ul>
-<li><a href="http://www.victoria.ac.nz/courses/comp/261/2017/offering?crn=18314">Algorithms and Data Structures (COMP261)</a></li>
-<li><a href="http://www.victoria.ac.nz/courses/swen/221/2017/offering?crn=18318">Software Development (SWEN221)</a></li>
-<li><a href="https://www.victoria.ac.nz/courses/comp/422/2017/offering?crn=2324">Data Mining, Neural Networks and Genetic Programming (COMP422)</a></li>
-<li><a href="https://www.victoria.ac.nz/courses/SWEN/304/2017/offering?crn=17186">Database System Engineering (SWEN304)</a></li>
-</ul>
-
-<h3 id="2016">2016</h3>
-
-<ul>
-<li><a href="http://www.victoria.ac.nz/courses/comp/307/2016/offering?crn=968">Introduction to Artificial Intelligence (COMP307)</a></li>
-<li><a href="http://www.victoria.ac.nz/courses/comp/422/2016/offering?crn=2324">Data Mining, Neural Network and Genetic Programming (COMP422)</a></li>
 </ul>
 
   </div>
