--- a/index.html
+++ b/index.html
@@ -857,7 +857,11 @@ Longfei Yan (Victoria University of Wellington, 2015): &ldquo;Evolutionary Web S
 
 <h3 id="conference-program-committee-member">Conference Program Committee Member</h3>
 
-<p>I serve as a PC member for ~40 international conferences (<a href="/pclist/">full list</a>).</p>
+<p>I serve as a PC member of ~40 international conferences (<a href="/pclist/">full list</a>).</p>
+
+<h3 id="journal-reviewer">Journal Reviewer</h3>
+
+<p>I serve as a reviewer of ~30 international journals, including the top/major journals in the EC/OR fields (<a href="/reviewers/">full list</a>).</p>
 
 <h3 id="membership">Membership</h3>
 
