--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -550,7 +550,7 @@
 <li>2017/10/10, <strong>Whole group</strong>, Practice on &ldquo;how to read a paper&rdquo; &ndash; reading &ldquo;<a href="http://ieeexplore.ieee.org/abstract/document/873238/">Stochastic Ranking for Constrained Evolutionary Optimization&rdquo;</a></li>
 <li>2017/10/03, <strong>Whole group</strong>, Discussion on &ldquo;how to read a paper&rdquo;, part II</li>
 <li>2017/09/26, <strong>Whole group</strong>, Discussion on &ldquo;how to read a paper&rdquo;, part I</li>
-<li>2017/09/19, <strong><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu</a></strong>, Discussion on &ldquo;An Evoluationary Approach to the Multidepot Capacitated Arc Routing Problems&rdquo;, <a href="resources/20170919report.pptx">[PPT]</a></li>
+<li>2017/09/19, <strong><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu</a></strong>, Discussion on &ldquo;An Evoluationary Approach to the Multidepot Capacitated Arc Routing Problems&rdquo;</li>
 <li>2017/09/12, <strong><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></strong>, Reference point adaptation during many-objective optimisation (Part 1)</li>
 </ul>
 
