--- a/index.html
+++ b/index.html
@@ -845,8 +845,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Recent Publications</h1>
-    <p><strong>journals</strong>: 23, <strong>conferences</strong>: 56 <br />
-<strong>h-index</strong>: 16, <strong>citations</strong>: 1361</p>
+    <p><strong>#jrnls</strong>: 23 \
+<strong>#confs</strong>: 56 <br />
+<strong>#chapters</strong>: 1 <br />
+<br />
+<strong>h-index</strong>: 16 <br />
+<strong>citations</strong>: 1361</p>
   </div>
   <div class="col-12 col-lg-8">
     
