--- a/ecco/index.html
+++ b/ecco/index.html
@@ -562,12 +562,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 
 <h2 id="contact">Contact</h2>
 
-<p>Dr. Yi Mei (Coordinator)
-Room CO353, Cotton Building,
-Victoria University of Wellington,
-Kelburn, Wellington, New Zealand
-E-mail: <a href="mailto:yi.mei@ecs.vuw.ac.nz">yi.mei AT ecs.vuw.ac.nz</a>
-Phone: +64 4 463 5233 x 8016</p>
+<p><a href="#contact">Dr. Yi Mei (Coordinator)</a></p>
 
     </div>
 
