--- a/ecco/index.html
+++ b/ecco/index.html
@@ -562,7 +562,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 
 <h2 id="contact">Contact</h2>
 
-<p><a href=/author/admin/_index#contact">Dr. Yi Mei (Coordinator)</a></p>
+<p><a href="https://meiyi1986.github.io/#contact">Dr. Yi Mei (Coordinator)</a></p>
 
     </div>
 
