--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Recent Publications</h1>
-    <p><strong>#jrnls</strong>: 23 \
+    <p><strong>#jrnls</strong>: 23 <br />
 <strong>#confs</strong>: 56 <br />
 <strong>#chapters</strong>: 1 <br />
 <br />
