--- a/index.html
+++ b/index.html
@@ -845,9 +845,9 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <div class="row">
   <div class="col-12 col-lg-4 section-heading">
     <h1>Recent Publications</h1>
-    <p><strong>#jrnls</strong>: 23 <br />
-<strong>#confs</strong>: 56 <br />
-<strong>#chapters</strong>: 1 <br />
+    <p><strong>#journal papers</strong>: 23 <br />
+<strong>#conferences papers</strong>: 56 <br />
+<strong>#book chapters</strong>: 1 <br />
 <br />
 <strong>h-index</strong>: 16 <br />
 <strong>citations</strong>: 1361</p>
