--- a/publication/index.html
+++ b/publication/index.html
@@ -3259,6 +3259,12 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/auto-heuristic-design/">
+    Project
+  </a>
+  
+
 
 
 
