--- a/publication/karunakaran-2017-toward/index.html
+++ b/publication/karunakaran-2017-toward/index.html
@@ -577,6 +577,12 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/auto-heuristic-design/">
+    Project
+  </a>
+  
+
 
 
 
