--- a/404.html
+++ b/404.html
@@ -423,7 +423,15 @@
   <h2>Projects</h2>
   
   <ul>
-    <li><a href="/project/auto-heuristic-design/">Automated Heuristic Design</a></li>
+    <li><a href="/project/ahd/">Automated Heuristic Design</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/project/esco/">Evolutionary Scheduling and Combinatorial Optimisation</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/project/lsgo/">Large Scale Global Optimisation</a></li>
   </ul>
   
   
