--- a/publication/index.html
+++ b/publication/index.html
@@ -3815,6 +3815,18 @@
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
 
 
 
@@ -8317,6 +8329,12 @@
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
 
 
 
