--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-AHD" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -730,7 +730,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-ESCO" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -752,7 +752,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-LSGO" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -1016,6 +1016,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
@@ -1143,6 +1149,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
 
 
 
@@ -1269,6 +1281,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
@@ -1404,6 +1422,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
 
 
 
@@ -1523,6 +1547,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
 
 
 
