--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-hyper-heuristic js-id-evolutionary-learning" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -730,7 +730,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-meta-heuristic" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
@@ -752,7 +752,7 @@
 
 
 
-<div class="col-lg-12 project-item isotope-item js-id-" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="col-lg-12 project-item isotope-item js-id-optimisation js-id-cooperative-coevolution" itemscope itemtype="http://schema.org/CreativeWork">
   <i class="far fa-copy pub-icon" aria-hidden="true"></i>
 
   <span class="project-title">
