--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2018/12/04, Jordan MacLaclan, practice on the AI paper presentation. 2018/11/27, Mahdi Abdollahi, practice on PhD proposal presentation: text classification in medical domain. 2018/11/20, Mazhar Anzari Ardeh, transfer learning in GPHH for UCARP. 2018/11/14, Mahdi Abdollahi, discussions on PhD proposal: text classification in medical domain. 2018/11/07, Victoria Huang, solving scheduling problems with reinforcement learning. 2018/10/30, Aaron Chen, introduction on reinforcement learning. 2018/10/23, Yi Mei, introduction on &ldquo;combinatorial optimisation and how to solve it&rdquo;: part 2.">
+  <meta name="description" content="2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing. 2019/01/15, Whole Group, how to write paper fast. 2019/01/08, Whole Group, update progress in the new year. 2018/12/04, Jordan MacLaclan, practice on the AI paper presentation. 2018/11/27, Mahdi Abdollahi, practice on PhD proposal presentation: text classification in medical domain.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2018/12/04, Jordan MacLaclan, practice on the AI paper presentation. 2018/11/27, Mahdi Abdollahi, practice on PhD proposal presentation: text classification in medical domain. 2018/11/20, Mazhar Anzari Ardeh, transfer learning in GPHH for UCARP. 2018/11/14, Mahdi Abdollahi, discussions on PhD proposal: text classification in medical domain. 2018/11/07, Victoria Huang, solving scheduling problems with reinforcement learning. 2018/10/30, Aaron Chen, introduction on reinforcement learning. 2018/10/23, Yi Mei, introduction on &ldquo;combinatorial optimisation and how to solve it&rdquo;: part 2."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/02/26, Binzi Xu, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling. 2019/02/19, Yi Mei, introduction to MOEA/D. 2019/02/12, Whole Group, how to deal with poor experimental results. 2019/01/22, Whole Group, preparing for paper writing. 2019/01/15, Whole Group, how to write paper fast. 2019/01/08, Whole Group, update progress in the new year. 2018/12/04, Jordan MacLaclan, practice on the AI paper presentation. 2018/11/27, Mahdi Abdollahi, practice on PhD proposal presentation: text classification in medical domain."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -503,6 +503,12 @@
 
     <div class="article-style" itemprop="articleBody">
       <ul>
+<li>2019/02/26, <strong><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a></strong>, evolving dispatching rules with delayed routing for dynamic flexible job shop scheduling.</li>
+<li>2019/02/19, <strong><a href="http://ecs.victoria.ac.nz/Main/YiMei">Yi Mei</a></strong>, introduction to MOEA/D.</li>
+<li>2019/02/12, <strong>Whole Group</strong>, how to deal with poor experimental results.</li>
+<li>2019/01/22, <strong>Whole Group</strong>, preparing for paper writing.</li>
+<li>2019/01/15, <strong>Whole Group</strong>, how to write paper fast.</li>
+<li>2019/01/08, <strong>Whole Group</strong>, update progress in the new year.</li>
 <li>2018/12/04, <strong>Jordan MacLaclan</strong>, practice on the AI paper presentation.</li>
 <li>2018/11/27, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMahdiAbdollahi">Mahdi Abdollahi</a></strong>, practice on PhD proposal presentation: text classification in medical domain.</li>
 <li>2018/11/20, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, transfer learning in GPHH for UCARP.</li>
