--- a/ecco/index.html
+++ b/ecco/index.html
@@ -519,6 +519,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="http://homepages.ecs.vuw.ac.nz/~mengjie/">Prof. Mengjie Zhang</a>: Evolutionary Computation and Machine Learning, Genetic Programming, Image Processing, Feature Selection</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/AaronChen">Dr. Aaron Chen</a>: Reinforcement Learning, NeuroEvolution (NEAT), Evolutionary Computation for Games, Evolutionary Scheduling</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/HuiMa">Dr. Hui Ma</a>: Evolutionary Resource Allocation, Web Service Composition, Cloud Computing</li>
+<li><a href="https://www.victoria.ac.nz/som/about/staff/vipul-jain">Dr. Vipul Jain</a>: Supply Chain Management, Operations Research</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva</a>: Evolutionary Web Service Composition and Combinatorial Optimisation</li>
 <li><a href="https://evoscheduling.wordpress.com/">Dr. Su Nguyen (Australia)</a>: Evolutionary Scheduling and Combinatorial Optimisation, Hyper-heuristics, Genetic Programming</li>
 </ul>
@@ -531,6 +532,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://www.victoria.ac.nz/architecture/research/current-phd-research/harry-yi-he">Harry He</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradGuiyingHuang">Victoria Huang</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran</a></li>
+<li>Jordan MacLaclan</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng</a></li>
@@ -538,15 +540,16 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></li>
+<li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
 
 <h4 id="alumni">Alumni</h4>
 
 <ul>
-<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva</a></li>
-<li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (graduated in 2018)</a></li></li>
-<li><a href="http://sms.victoria.ac.nz/Main/GradRachelHunt">Rachel Hunt (graduated 2016)</a></li></li>
+<li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva (Graduated in 2018)</a></li>
+<li><a href="https://scholar.google.co.nz/citations?user=YctRNIMAAAAJ&hl=en">Yuxin Liu (Visiting student from Southwest University, 2017-2018, graduated in 2018)</a></li></li>
+<li><a href="http://sms.victoria.ac.nz/Main/GradRachelHunt">Rachel Hunt (Graduated in 2016)</a></li></li>
 </ul>
 
 <h2 id="talks">Talks</h2>
