--- a/ecco/index.html
+++ b/ecco/index.html
@@ -534,6 +534,7 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran</a></li>
 <li>Jordan MacLaclan</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
+<li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></li>
