--- a/index.html
+++ b/index.html
@@ -1845,6 +1845,13 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>A Git <a href="https://github.com/meiyi1986/gpucarp">repository</a> with <strong>meta-heuristic and hyper-heuristic algorithms for uncertain arc routing problem</strong>.</li>
 </ul>
 
+<h3 id="interesting-links">Interesting links</h3>
+
+<ul>
+<li>The HyFlex hyper-heuristic framework: <a href="http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html">http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html</a></li>
+<li>The EvoHyp hyper-heuristic framwork: <a href="http://titancs.ukzn.ac.za/EvoHyp.aspx">http://titancs.ukzn.ac.za/EvoHyp.aspx</a></li>
+</ul>
+
   </div>
   
 </div>
