--- a/index.html
+++ b/index.html
@@ -1841,13 +1841,14 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="code">Code</h3>
 
 <ul>
-<li>A Git <a href="https://github.com/meiyi1986/GPJSS">repository</a> with <strong>genetic programming hyper-heuristics for evolving dispatching rules for job shop scheduling</strong>.</li>
-<li>A Git <a href="https://github.com/meiyi1986/gpucarp">repository</a> with <strong>meta-heuristic and hyper-heuristic algorithms for uncertain arc routing problem</strong>.</li>
+<li>My Git <a href="https://github.com/meiyi1986/GPJSS">repository</a>: <strong>genetic programming hyper-heuristics for evolving dispatching rules for job shop scheduling</strong>.</li>
+<li>My Git <a href="https://github.com/meiyi1986/gpucarp">repository</a>: <strong>meta-heuristic and hyper-heuristic algorithms for uncertain arc routing problem</strong>.</li>
 </ul>
 
 <h3 id="interesting-links">Interesting links</h3>
 
 <ul>
+<li>An interesting <strong>Science</strong> paper <a href="http://science.sciencemag.org/content/324/5923/81">Distilling Free-Form Natural Laws from Experimental Data</a>, which uses genetic programming to automatically discover natural laws (symbolic regression).</li>
 <li>The HyFlex hyper-heuristic framework: <a href="http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html">http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html</a></li>
 <li>The EvoHyp hyper-heuristic framwork: <a href="http://titancs.ukzn.ac.za/EvoHyp.aspx">http://titancs.ukzn.ac.za/EvoHyp.aspx</a></li>
 </ul>
