--- a/publication/mei-2016-competitive/index.html
+++ b/publication/mei-2016-competitive/index.html
@@ -593,6 +593,14 @@
 </button>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="https://au.mathworks.com/matlabcentral/fileexchange/45783-the-cc-gdg-cmaes-algorithm" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
