--- a/publication/mei-2014-cooperative/index.html
+++ b/publication/mei-2014-cooperative/index.html
@@ -586,6 +586,14 @@
 </button>
 
 
+  
+  
+    
+  
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/mei-2014-cooperative/code.zip" target="_blank" rel="noopener">
+  Code
+</a>
+
 
 
 
